# newLibstormSample

./: .gitignore  CMakeLists.txt  CMakePresets.json
app/: CMakeLists.txt
app/source/: main.cpp
libStorm/: CMakeLists.txt
libStorm/include/Storm/: all.hpp  lib.hpp
libStorm/include/Storm/core/: Node.hpp  Resource.hpp  all.hpp
libStorm/include/Storm/graphics/: Window.hpp  all.hpp  deps.hpp
libStorm/include/Storm/networking/: all.hpp  deps.hpp
libStorm/include/Storm/nodes/: TextNode.hpp  all.hpp
libStorm/include/Storm/resources/: Font.hpp  all.hpp
libStorm/source/: lib.cpp
libStorm/source/core/: Node.cpp  Resource.cpp
libStorm/source/graphics/: Window.cpp  lib.cpp
libStorm/source/networking/: lib.cpp
libStorm/source/nodes/: TextNode.cpp
libStorm/source/resources/: Font.cpp
